src/lang/CParser.ts
// Generated from ./src/lang/C.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CListener } from "./CListener";
import { CVisitor } from "./CVisitor";


export class CParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly Break = 3;
	public static readonly Case = 4;
	public static readonly Char = 5;
	public static readonly Const = 6;
	public static readonly Continue = 7;
	public static readonly Default = 8;
	public static readonly Do = 9;
	public static readonly Else = 10;
	public static readonly Float = 11;
	public static readonly For = 12;
	public static readonly If = 13;
	public static readonly Int = 14;
	public static readonly Long = 15;
	public static readonly Return = 16;
	public static readonly Signed = 17;
	public static readonly Struct = 18;
	public static readonly Unsigned = 19;
	public static readonly Void = 20;
	public static readonly While = 21;
	public static readonly LeftParen = 22;
	public static readonly RightParen = 23;
	public static readonly LeftBracket = 24;
	public static readonly RightBracket = 25;
	public static readonly LeftBrace = 26;
	public static readonly RightBrace = 27;
	public static readonly Less = 28;
	public static readonly LessEqual = 29;
	public static readonly Greater = 30;
	public static readonly GreaterEqual = 31;
	public static readonly LeftShift = 32;
	public static readonly RightShift = 33;
	public static readonly Plus = 34;
	public static readonly PlusPlus = 35;
	public static readonly Minus = 36;
	public static readonly MinusMinus = 37;
	public static readonly Star = 38;
	public static readonly Div = 39;
	public static readonly Mod = 40;
	public static readonly And = 41;
	public static readonly Or = 42;
	public static readonly AndAnd = 43;
	public static readonly OrOr = 44;
	public static readonly Caret = 45;
	public static readonly Not = 46;
	public static readonly Tilde = 47;
	public static readonly Question = 48;
	public static readonly Colon = 49;
	public static readonly Semi = 50;
	public static readonly Comma = 51;
	public static readonly Assign = 52;
	public static readonly StarAssign = 53;
	public static readonly DivAssign = 54;
	public static readonly ModAssign = 55;
	public static readonly PlusAssign = 56;
	public static readonly MinusAssign = 57;
	public static readonly LeftShiftAssign = 58;
	public static readonly RightShiftAssign = 59;
	public static readonly AndAssign = 60;
	public static readonly XorAssign = 61;
	public static readonly OrAssign = 62;
	public static readonly Equal = 63;
	public static readonly NotEqual = 64;
	public static readonly Arrow = 65;
	public static readonly Dot = 66;
	public static readonly Identifier = 67;
	public static readonly Constant = 68;
	public static readonly DigitSequence = 69;
	public static readonly StringLiteral = 70;
	public static readonly Whitespace = 71;
	public static readonly Newline = 72;
	public static readonly BlockComment = 73;
	public static readonly LineComment = 74;
	public static readonly RULE_primaryExpression = 0;
	public static readonly RULE_postfixExpression = 1;
	public static readonly RULE_argumentExpressionList = 2;
	public static readonly RULE_unaryExpression = 3;
	public static readonly RULE_unaryOperator = 4;
	public static readonly RULE_castExpression = 5;
	public static readonly RULE_multiplicativeExpression = 6;
	public static readonly RULE_additiveExpression = 7;
	public static readonly RULE_shiftExpression = 8;
	public static readonly RULE_relationalExpression = 9;
	public static readonly RULE_equalityExpression = 10;
	public static readonly RULE_andExpression = 11;
	public static readonly RULE_exclusiveOrExpression = 12;
	public static readonly RULE_inclusiveOrExpression = 13;
	public static readonly RULE_logicalAndExpression = 14;
	public static readonly RULE_logicalOrExpression = 15;
	public static readonly RULE_conditionalExpression = 16;
	public static readonly RULE_assignmentExpression = 17;
	public static readonly RULE_assignmentOperator = 18;
	public static readonly RULE_expression = 19;
	public static readonly RULE_constantExpression = 20;
	public static readonly RULE_declaration = 21;
	public static readonly RULE_declarationSpecifiers = 22;
	public static readonly RULE_declarationSpecifiers2 = 23;
	public static readonly RULE_declarationSpecifier = 24;
	public static readonly RULE_initDeclaratorList = 25;
	public static readonly RULE_initDeclarator = 26;
	public static readonly RULE_typeSpecifier = 27;
	public static readonly RULE_structSpecifier = 28;
	public static readonly RULE_structDeclarationList = 29;
	public static readonly RULE_structDeclaration = 30;
	public static readonly RULE_specifierQualifierList = 31;
	public static readonly RULE_structDeclaratorList = 32;
	public static readonly RULE_structDeclarator = 33;
	public static readonly RULE_typeQualifier = 34;
	public static readonly RULE_functionSpecifier = 35;
	public static readonly RULE_declarator = 36;
	public static readonly RULE_directDeclarator = 37;
	public static readonly RULE_nestedParenthesesBlock = 38;
	public static readonly RULE_pointer = 39;
	public static readonly RULE_typeQualifierList = 40;
	public static readonly RULE_parameterTypeList = 41;
	public static readonly RULE_parameterList = 42;
	public static readonly RULE_parameterDeclaration = 43;
	public static readonly RULE_identifierList = 44;
	public static readonly RULE_typeName = 45;
	public static readonly RULE_abstractDeclarator = 46;
	public static readonly RULE_directAbstractDeclarator = 47;
	public static readonly RULE_typedefName = 48;
	public static readonly RULE_initializer = 49;
	public static readonly RULE_initializerList = 50;
	public static readonly RULE_designation = 51;
	public static readonly RULE_designatorList = 52;
	public static readonly RULE_designator = 53;
	public static readonly RULE_statement = 54;
	public static readonly RULE_compoundStatement = 55;
	public static readonly RULE_blockItemList = 56;
	public static readonly RULE_blockItem = 57;
	public static readonly RULE_expressionStatement = 58;
	public static readonly RULE_selectionStatement = 59;
	public static readonly RULE_iterationStatement = 60;
	public static readonly RULE_forCondition = 61;
	public static readonly RULE_forDeclaration = 62;
	public static readonly RULE_forExpression = 63;
	public static readonly RULE_compilationUnit = 64;
	public static readonly RULE_translationUnit = 65;
	public static readonly RULE_externalDeclaration = 66;
	public static readonly RULE_functionDefinition = 67;
	public static readonly RULE_declarationList = 68;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"primaryExpression", "postfixExpression", "argumentExpressionList", "unaryExpression", 
		"unaryOperator", "castExpression", "multiplicativeExpression", "additiveExpression", 
		"shiftExpression", "relationalExpression", "equalityExpression", "andExpression", 
		"exclusiveOrExpression", "inclusiveOrExpression", "logicalAndExpression", 
		"logicalOrExpression", "conditionalExpression", "assignmentExpression", 
		"assignmentOperator", "expression", "constantExpression", "declaration", 
		"declarationSpecifiers", "declarationSpecifiers2", "declarationSpecifier", 
		"initDeclaratorList", "initDeclarator", "typeSpecifier", "structSpecifier", 
		"structDeclarationList", "structDeclaration", "specifierQualifierList", 
		"structDeclaratorList", "structDeclarator", "typeQualifier", "functionSpecifier", 
		"declarator", "directDeclarator", "nestedParenthesesBlock", "pointer", 
		"typeQualifierList", "parameterTypeList", "parameterList", "parameterDeclaration", 
		"identifierList", "typeName", "abstractDeclarator", "directAbstractDeclarator", 
		"typedefName", "initializer", "initializerList", "designation", "designatorList", 
		"designator", "statement", "compoundStatement", "blockItemList", "blockItem", 
		"expressionStatement", "selectionStatement", "iterationStatement", "forCondition", 
		"forDeclaration", "forExpression", "compilationUnit", "translationUnit", 
		"externalDeclaration", "functionDefinition", "declarationList",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'__extension__'", "'inline'", "'break'", "'case'", "'char'", 
		"'const'", "'continue'", "'default'", "'do'", "'else'", "'float'", "'for'", 
		"'if'", "'int'", "'long'", "'return'", "'signed'", "'struct'", "'unsigned'", 
		"'void'", "'while'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", 
		"'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", 
		"'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", 
		"':'", "';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
		"'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", "'->'", "'.'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "Break", "Case", "Char", "Const", "Continue", 
		"Default", "Do", "Else", "Float", "For", "If", "Int", "Long", "Return", 
		"Signed", "Struct", "Unsigned", "Void", "While", "LeftParen", "RightParen", 
		"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", 
		"Greater", "GreaterEqual", "LeftShift", "RightShift", "Plus", "PlusPlus", 
		"Minus", "MinusMinus", "Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", 
		"Caret", "Not", "Tilde", "Question", "Colon", "Semi", "Comma", "Assign", 
		"StarAssign", "DivAssign", "ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", 
		"RightShiftAssign", "AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", 
		"Arrow", "Dot", "Identifier", "Constant", "DigitSequence", "StringLiteral", 
		"Whitespace", "Newline", "BlockComment", "LineComment",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CParser._LITERAL_NAMES, CParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "C.g4"; }

	// @Override
	public get ruleNames(): string[] { return CParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CParser._ATN, this);
	}
	// @RuleVersion(0)
	public primaryExpression(): PrimaryExpressionContext {
		let _localctx: PrimaryExpressionContext = new PrimaryExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CParser.RULE_primaryExpression);
		let _la: number;
		try {
			this.state = 149;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CParser.Identifier:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 138;
				this.match(CParser.Identifier);
				}
				break;
			case CParser.Constant:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 139;
				this.match(CParser.Constant);
				}
				break;
			case CParser.StringLiteral:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 141;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 140;
					this.match(CParser.StringLiteral);
					}
					}
					this.state = 143;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === CParser.StringLiteral);
				}
				break;
			case CParser.LeftParen:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 145;
				this.match(CParser.LeftParen);
				this.state = 146;
				this.expression();
				this.state = 147;
				this.match(CParser.RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public postfixExpression(): PostfixExpressionContext {
		let _localctx: PostfixExpressionContext = new PostfixExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CParser.RULE_postfixExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 151;
			this.primaryExpression();
			}
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CParser.LeftParen || _la === CParser.LeftBracket || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & ((1 << (CParser.PlusPlus - 35)) | (1 << (CParser.MinusMinus - 35)) | (1 << (CParser.Arrow - 35)) | (1 << (CParser.Dot - 35)))) !== 0)) {
				{
				this.state = 164;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case CParser.LeftBracket:
					{
					this.state = 152;
					this.match(CParser.LeftBracket);
					this.state = 153;
					this.expression();
					this.state = 154;
					this.match(CParser.RightBracket);
					}
					break;
				case CParser.LeftParen:
					{
					this.state = 156;
					this.match(CParser.LeftParen);
					this.state = 158;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === CParser.T__0 || _la === CParser.LeftParen || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (CParser.Plus - 34)) | (1 << (CParser.PlusPlus - 34)) | (1 << (CParser.Minus - 34)) | (1 << (CParser.MinusMinus - 34)) | (1 << (CParser.Star - 34)) | (1 << (CParser.And - 34)) | (1 << (CParser.Not - 34)))) !== 0) || ((((_la - 67)) & ~0x1F) === 0 && ((1 << (_la - 67)) & ((1 << (CParser.Identifier - 67)) | (1 << (CParser.Constant - 67)) | (1 << (CParser.DigitSequence - 67)) | (1 << (CParser.StringLiteral - 67)))) !== 0)) {
						{
						this.state = 157;
						this.argumentExpressionList();
						}
					}

					this.state = 160;
					this.match(CParser.RightParen);
					}
					break;
				case CParser.Arrow:
				case CParser.Dot:
					{
					this.state = 161;
					_la = this._input.LA(1);
					if (!(_la === CParser.Arrow || _la === CParser.Dot)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					this.state = 162;
					this.match(CParser.Identifier);
					}
					break;
				case CParser.PlusPlus:
				case CParser.MinusMinus:
					{
					this.state = 163;
					_la = this._input.LA(1);
					if (!(_la === CParser.PlusPlus || _la === CParser.MinusMinus)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public argumentExpressionList(): ArgumentExpressionListContext {
		let _localctx: ArgumentExpressionListContext = new ArgumentExpressionListContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CParser.RULE_argumentExpressionList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 169;
			this.assignmentExpression();
			this.state = 174;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CParser.Comma) {
				{
				{
				this.state = 170;
				this.match(CParser.Comma);
				this.state = 171;
				this.assignmentExpression();
				}
				}
				this.state = 176;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unaryExpression(): UnaryExpressionContext {
		let _localctx: UnaryExpressionContext = new UnaryExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CParser.RULE_unaryExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CParser.PlusPlus || _la === CParser.MinusMinus) {
				{
				{
				this.state = 177;
				_la = this._input.LA(1);
				if (!(_la === CParser.PlusPlus || _la === CParser.MinusMinus)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 182;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 187;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CParser.LeftParen:
			case CParser.Identifier:
			case CParser.Constant:
			case CParser.StringLiteral:
				{
				this.state = 183;
				this.postfixExpression();
				}
				break;
			case CParser.Plus:
			case CParser.Minus:
			case CParser.Star:
			case CParser.And:
			case CParser.Not:
				{
				this.state = 184;
				this.unaryOperator();
				this.state = 185;
				this.castExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unaryOperator(): UnaryOperatorContext {
		let _localctx: UnaryOperatorContext = new UnaryOperatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CParser.RULE_unaryOperator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 189;
			_la = this._input.LA(1);
			if (!(((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (CParser.Plus - 34)) | (1 << (CParser.Minus - 34)) | (1 << (CParser.Star - 34)) | (1 << (CParser.And - 34)) | (1 << (CParser.Not - 34)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public castExpression(): CastExpressionContext {
		let _localctx: CastExpressionContext = new CastExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CParser.RULE_castExpression);
		let _la: number;
		try {
			this.state = 201;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 192;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CParser.T__0) {
					{
					this.state = 191;
					this.match(CParser.T__0);
					}
				}

				this.state = 194;
				this.match(CParser.LeftParen);
				this.state = 195;
				this.typeName();
				this.state = 196;
				this.match(CParser.RightParen);
				this.state = 197;
				this.castExpression();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 199;
				this.unaryExpression();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 200;
				this.match(CParser.DigitSequence);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public multiplicativeExpression(): MultiplicativeExpressionContext {
		let _localctx: MultiplicativeExpressionContext = new MultiplicativeExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CParser.RULE_multiplicativeExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 203;
			this.castExpression();
			this.state = 208;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & ((1 << (CParser.Star - 38)) | (1 << (CParser.Div - 38)) | (1 << (CParser.Mod - 38)))) !== 0)) {
				{
				{
				this.state = 204;
				_la = this._input.LA(1);
				if (!(((((_la - 38)) & ~0x1F) === 0 && ((1 << (_la - 38)) & ((1 << (CParser.Star - 38)) | (1 << (CParser.Div - 38)) | (1 << (CParser.Mod - 38)))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 205;
				this.castExpression();
				}
				}
				this.state = 210;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public additiveExpression(): AdditiveExpressionContext {
		let _localctx: AdditiveExpressionContext = new AdditiveExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, CParser.RULE_additiveExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 211;
			this.multiplicativeExpression();
			this.state = 216;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CParser.Plus || _la === CParser.Minus) {
				{
				{
				this.state = 212;
				_la = this._input.LA(1);
				if (!(_la === CParser.Plus || _la === CParser.Minus)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}
